[hadoop]: change credential fetcher response type to list instead of single credential
Signed-off-by: foss-contributor <282724952+foss-contributor@users.noreply.github.com>